add link to GitHub repo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 |replace: '<em>', '<span class="red">'
 |replace: '</em>', '</span>'}}
 <hr>
-<p class="footer">All text &copy;2013-2014 <a href="https://vndb.org/u293">GabeZhul</a>. <a href="https://vndb.org/{{page.tid}}">Originally posted on VNDB.</a> Distributed with permission.</p>
+<p class="footer">All text &copy;2013-2014 <a href="https://vndb.org/u293">GabeZhul</a>. <a href="https://vndb.org/{{page.tid}}">Originally posted on VNDB.</a> Distributed with permission. <a href="https://github.com/ldjb/uminekosolution">Source on GitHub.</a></p>
 {{backlink}}
 </body>
 </html>
